Adjusted stream styles. Fixed line spacing in speaker names.

--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -344,6 +344,7 @@ article.events {
   font-family: futura-pt;
   font-weight: 700;
   font-size: 1.25em;
+  line-height: 1.2;
   border-bottom: 1px solid #ccc;
 
   &:hover,
